--- a/en/index.html
+++ b/en/index.html
@@ -277,7 +277,7 @@ If you are considering realizing services utilizing cutting-edge technology, fee
 
         <div id="contact" data-aos="fade-up" data-aos-duration="1400">
             <h2>Contact</h2>
-            <p><a href="https://facebook.com/takuto.yoshikai">Facebook</a> ・ <a href="mailto:takuto.yoshikai@gmail.com">Email</a> ・ <a href="https://linkedin.com/in/takutoyoshikai">LinkedIn</a> ・ <a href="https://www.wantedly.com/id/TakutoYoshikai">Wantedly</a></p>
+            <p><a href="https://facebook.com/takuto.yoshikai">Facebook</a> ・ <a href="https://linkedin.com/in/takutoyoshikai">LinkedIn</a> ・ <a href="https://www.wantedly.com/id/TakutoYoshikai">Wantedly</a></p>
         </div>
     </main>
 
