--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ header {
 
         <div id="contact" data-aos="fade-up" data-aos-duration="1400">
             <h2>お問い合わせ</h2>
-            <p><a href="https://facebook.com/takuto.yoshikai">Facebook</a> ・ <a href="mailto:takuto.yoshikai@gmail.com">Email</a> ・ <a href="https://linkedin.com/in/takutoyoshikai">LinkedIn</a> ・ <a href="https://www.wantedly.com/id/TakutoYoshikai">Wantedly</a></p>
+            <p><a href="https://facebook.com/takuto.yoshikai">Facebook</a> ・ <a href="https://linkedin.com/in/takutoyoshikai">LinkedIn</a> ・ <a href="https://www.wantedly.com/id/TakutoYoshikai">Wantedly</a></p>
         </div>
     </main>
 
