--- a/en/index.html
+++ b/en/index.html
@@ -244,7 +244,7 @@ If you are considering realizing services utilizing cutting-edge technology, fee
 
         <div id="work" data-aos="fade-up" data-aos-duration="1400">
             <h2>Work Opportunities</h2>
-            <p class="status">Current Status: <b>Unavailable for contract work ❌</b></p>
+            <p class="status">Current Status: <b>Available for contract work ✅</b></p>
             <div class="section">
               <h2 class="sub-title">Available Services</h2>
               <ul>
