--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ header {
             </div>
             <div class="achievement">
               <h2>13社と15プロジェクト</h2>
-              <p>10年間で携わった<a href="https://resume.yoshikai.net">案件</a></p>
+              <p>10年間で携わった<a href="https://takutoyoshikai.github.io/CV-public/">案件</a></p>
             </div>
             <div class="achievement">
               <h2>217 repositories</h2>
