--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
       margin-bottom: 80px;
     }
 
+    #work p {
+      font-size: 14px;
+      line-height: 30px;
+    }
+
     #contact {
       margin-bottom: 120px;
     }
@@ -161,7 +166,6 @@
     footer p {
       font-size: 12px;
     }
-
 
     @media (max-width: 768px) {
       main>div {
@@ -260,40 +264,18 @@
 
     <div id="work" data-aos="fade-up" data-aos-duration="1400">
       <h2>仕事のご相談</h2>
-      <p class="status">現在の状況: <b>業務委託可 ✅</b></p>
-      <div class="section">
-        <h2 class="sub-title">現在受託可能なお仕事</h2>
-        <ul>
-          <li>Webデザイン</li>
-          <li>Webサービス開発（フロントエンド）</li>
-          <li>Webサービス開発（バックエンド）</li>
-          <li>インフラ構築</li>
-          <li>セキュリティコンサルティング</li>
-          <li>セキュリティ製品の開発</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h2 class="sub-title">開発に活かせるスキル</h2>
-        <ul>
-          <li>脆弱性診断</li>
-          <li>生成AI</li>
-          <li>ネットワーク</li>
-          <li>Linux</li>
-          <li>GCP・AWS</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h2 class="sub-title">業務でやりとり可能な言語</h2>
-        <ul>
-          <li>日本語</li>
-          <li>英語</li>
-        </ul>
-      </div>
+      <p style="text-align: left; margin-bottom: 30px;">
+        テック企業向けにCTOサポートサービスを提供しています。CTO業務の専門家として、スポットでの対応から継続的なチーム改善、採用戦略の立案まで幅広くサポートいたします。
+      </p>
+      <p style="text-align: left; margin-bottom: 30px;">
+        特にセキュリティ診断（ソースコード、OWASP、設計）やインフラの最適化・コスト削減を得意としており、技術的な課題解決を通じて企業の成長を支援します。
+      </p>
+      <p class="status">現在: <b>スポット対応・継続対応(業務委託) 可能 ✅</b></p>
     </div>
 
     <div id="contact" data-aos="fade-up" data-aos-duration="1400">
       <h2>お問い合わせ</h2>
-      <p><a href="https://facebook.com/takuto.yoshikai">Facebook</a> ・ <a
+      <p><a href="mailto:takuto.yoshikai@gmail.com">Email</a> ・ <a
           href="https://linkedin.com/in/takutoyoshikai">LinkedIn</a> ・ <a
           href="https://www.wantedly.com/id/TakutoYoshikai">Wantedly</a></p>
     </div>
