--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <div id="work" data-aos="fade-up" data-aos-duration="1400">
       <h2>仕事のご相談</h2>
       <p style="text-align: left; margin-bottom: 30px;">
-        テック企業向けにCTOサポートサービスを提供しています。CTO業務の専門家として、スポットでの対応から継続的なチーム改善、採用戦略の立案まで幅広くサポートいたします。
+        テック企業向けに<b>CTOサポートサービス</b>を提供しています。CTO業務の専門家として、スポットでの対応から継続的なチーム改善、採用戦略の立案まで幅広くサポートいたします。
       </p>
       <p style="text-align: left; margin-bottom: 30px;">
         特にセキュリティ診断（ソースコード、OWASP、設計）やインフラの最適化・コスト削減を得意としており、技術的な課題解決を通じて企業の成長を支援します。
