--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <p style="text-align: left; margin-bottom: 30px;">
         特にセキュリティ診断（ソースコード、OWASP、設計）やインフラの最適化・コスト削減を得意としており、技術的な課題解決を通じて企業の成長を支援します。
       </p>
-      <p class="status">現在: <b>スポット対応・継続対応(業務委託) 可能 ✅</b></p>
+      <p class="status">現在: <b>スポット対応・継続対応(業務委託)・顧問契約 可能 ✅</b></p>
     </div>
 
     <div id="contact" data-aos="fade-up" data-aos-duration="1400">
