--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@
     </div>
 
     <div id="work" data-aos="fade-up" data-aos-duration="1400">
-      <h2>仕事のご相談</h2>
+      <h2>CTOサポートサービス</h2>
       <p style="text-align: left; margin-bottom: 30px;">
-        テック企業向けに<b>CTOサポートサービス</b>を提供しています。CTO業務の専門家として、スポットでの対応から継続的なチーム改善、採用戦略の立案まで幅広くサポートいたします。
+        テック企業様向けにCTOの意思決定・組織作り・深い技術の判断のサポート、またはCTO不在の企業様向けのITコンサルティングを提供しています。CTO業務の専門家として、スポットでの対応から継続的なチーム改善、採用戦略の立案まで幅広くサポートいたします。
       </p>
       <p style="text-align: left; margin-bottom: 30px;">
-        特にセキュリティ診断（ソースコード、OWASP、設計）やインフラの最適化・コスト削減を得意としており、技術的な課題解決を通じて企業の成長を支援します。
+        特にセキュリティ診断（ソースコード、OWASP Top10対策、設計）やインフラの最適化・コスト削減を得意としており、技術的な課題解決を通じて企業の成長を支援します。
       </p>
       <p class="status">現在: <b>スポット対応・継続対応(業務委託)・顧問契約 可能 ✅</b></p>
     </div>
